--- a/line-graph-testbench.html
+++ b/line-graph-testbench.html
@@ -7,7 +7,7 @@
     <link type="text/css" rel="stylesheet" href="line-graph-testbench.css">
 </head>
 <body>
-    <canvas id="canvas" width="500" height="400"></canvas>
+    <canvas id="canvas"></canvas>
     <script src="line-graph.js"></script>
     <script src="line-graph-testbench.js"></script>
 </body>
